# gpu_info

./: .gitignore  LICENSE.md  README.md  pyproject.toml
examples/: estimate_gguf.py
gpu_info/: __cli__.py  __init__.py  _cpu.py  _cuda.py  _cudart.py  _exceptions.py  _gpu_info.py  _libcuda.py  _libcudart.py  _types.py  _vulkan.py
gpu_info/providers/: _cpu.py  _libcuda.py  _libcudart.py  _metal_info.py  _vulkan.py
tests/: test_cuda.py
