[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu_info"
dynamic = ["version"]
description = "Library for getting GPU information for various platforms"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Andrei Betlen", email = "abetlen@gmail.com" },
]

[project.scripts]
gpu_info = "gpu_info.__cli__:main"

[project.optional-dependencies]
test = [
    "pytest>=7.4.0"
]
